Cleanup `build.gradle.kts`